# verus-hash

./:     ```  .gitignore  Cargo.toml  README.md  client.rs  program.json
.cargo/: config.toml
client/: Cargo.toml
client/src/: main.rs
origin-impl/: Makefile  endian.h  haraka.h  vecgen.cpp  verus_hash.cpp  verus_hash.h
program/: Cargo.toml
program/src/: lib.rs
program/tests/: smoke.rs  test.rs
verus/: Cargo.toml  build.rs  build.sh
verus/c/: common.h  generate_constants.c  haraka.h  haraka_constants.c  haraka_portable.c  haraka_portable.h  haraka_rc_vrsc.inc  sbox.inc  uint256.cpp  uint256.h  verus_clhash.cpp  verus_clhash.h  verus_clhash_portable.cpp  verus_hash.cpp  verus_hash.h
verus/src/: lib.rs  rust_impl.rs
