[package]
name = "verus-client"
version = "0.0.1"        # Use workspace version or define explicitly
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true, optional = true } # Make optional if not always needed
dirs = { workspace = true, optional = true }   # Make optional if not always needed
solana-client = { workspace = true }
solana-sdk = { workspace = true }
# Add other dependencies if needed, inheriting from workspace where possible

# Add features if you made dependencies optional
[features]
default = ["anyhow", "dirs"] # Example: enable optional deps by default
