[package]
name = "verus-client"
version = "0.0.1"        # Use workspace version or define explicitly
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true, optional = true } # Make optional if not always needed
dirs = { workspace = true, optional = true } # Make optional if not always needed
solana-client = { workspace = true }
solana-sdk = { workspace = true }
verus = { path = "../verus", features = [
  "portable",
] } # Add verus as regular dependency
# Add other dependencies if needed, inheriting from workspace where possible

# Add features if you made dependencies optional
[features]
default = ["anyhow", "dirs"] # Example: enable optional deps by default

# Add dev dependencies for the integration test
[dev-dependencies]
solana-program-test = "2.2" # Or use workspace version if defined
tokio = { version = "1.37", features = [
  "macros",
  "rt-multi-thread",
] } # Or use workspace version
verus = { path = "../verus", features = [
  "portable",
] } # Keep portable for tests if needed, but client now depends directly
verus-program = { path = "../program", features = [
  "no-entrypoint",
] } # Need program crate for ID and processor macro
