[package]
name = "verus"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
cfg-if = "1.0"
haraka-bpf = { git = "https://github.com/regolith-labs/haraka-bpf", rev = "10ad564" } # Using specific rev for haraka-bpf
bytemuck = { version = "1.16", features = [
  "derive",
  "extern_crate_alloc",
] } # Needed for safe casting/transmuting


[features]
default = ["std"]
std = [
] # The 'std' feature implies standard library availability (including alloc)

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"

[lib]
crate-type = ["cdylib", "rlib"] # cdylib is what Solana wants
